--- a/assets/reset.less
+++ b/assets/reset.less
@@ -39,3 +39,7 @@ pre {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
+input, textarea, img, video, object {
+  box-sizing: border-box;
+}
